--- a/ui-learn/build.gradle
+++ b/ui-learn/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'com.android.application'
+ext {
+    support_lib_version = "27.0.2"
+    target_sdk_version = 27
+    compile_sdk_version = 27
+    min_sdk_version = 16
+}
 
 android {
-    compileSdkVersion 26
-
-
+    compileSdkVersion compile_sdk_version
 
     defaultConfig {
         applicationId "com.tifone.ui"
-        minSdkVersion 16
-        targetSdkVersion 26
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
         versionCode 1
         versionName "1.0"
 
@@ -30,9 +34,10 @@ dependencies {
 
     // libs dependencies
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:design:26.0.2'
-    implementation 'com.android.support:recyclerview-v7:26.0.2'
-    implementation 'com.android.support:cardview-v7:26.0.2'
+    implementation "com.android.support:design:${support_lib_version}"
+    implementation "com.android.support:recyclerview-v7:${support_lib_version}"
+    implementation "com.android.support:cardview-v7:${support_lib_version}"
+    implementation "com.android.support:support-compat:${support_lib_version}"
 
     // test unit
     testImplementation 'junit:junit:4.12'
@@ -50,4 +55,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+
+    // 图片加载
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
 }
