--- a/ui-learn/src/main/AndroidManifest.xml
+++ b/ui-learn/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".retrofit.RetrofitActivity" />
         <activity android:name=".annotation.AnnotationActivity" />
         <activity android:name=".glide.GlideActivity" />
+        <activity android:name=".recyclerview.MyPullLoadActivity" />
     </application>
 
 </manifest>
